Archive2/b7/d144d4c526d93b/output
main.cpp:1:1: error: 'http' does not name a type
 http://coliru.stacked-crooked.com/a/633d89485147d019
 ^
